logs/mirror/build.make.106.log.stderr
In file included from /home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/bodyState.cpp:1:0:
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:47:1: error: expected ‘;’ after class definition
 }
 ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/bodyState.cpp: In constructor ‘rebuiltJoint::rebuiltJoint(Point, Point, int, int)’:
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/bodyState.cpp:128:2: error: ‘Tx’ was not declared in this scope
  Tx=getAngleInPlane(XZ,parent,thisOne,parent);
  ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/bodyState.cpp:129:2: error: ‘Ty’ was not declared in this scope
  Ty=getAngleInPlane(YZ,parent,thisOne,parent);
  ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/bodyState.cpp:130:2: error: ‘Tz’ was not declared in this scope
  Tz=getAngleInPlane(XY,parent,thisOne,parent);
  ^
make[2]: *** [CMakeFiles/mirror.dir/src/bodyState.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/mirror.cpp:9:0:
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:47:1: error: expected ‘;’ after class definition
 }
 ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp: In constructor ‘BodyState::BodyState()’:
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:65:7: error: no matching function for call to ‘rebuiltJoint::rebuiltJoint()’
 class BodyState{
       ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:65:7: note: candidates are:
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:41:2: note: rebuiltJoint::rebuiltJoint(Point, Point, int, int)
  rebuiltJoint(Point thisOne, Point parent, int ID_, int parentID_);
  ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:41:2: note:   candidate expects 4 arguments, 0 provided
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:39:7: note: rebuiltJoint::rebuiltJoint(const rebuiltJoint&)
 class rebuiltJoint{
       ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:39:7: note:   candidate expects 1 argument, 0 provided
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/mirror.cpp: At global scope:
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/mirror.cpp:49:11: note: synthesized method ‘BodyState::BodyState()’ first required here 
 BodyState stateTracker;
           ^
In file included from /home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/mirror.cpp:9:0:
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp: In constructor ‘BodyState::BodyState()’:
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:65:7: error: no matching function for call to ‘rebuiltJoint::rebuiltJoint()’
 class BodyState{
       ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:65:7: note: candidates are:
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:41:2: note: rebuiltJoint::rebuiltJoint(Point, Point, int, int)
  rebuiltJoint(Point thisOne, Point parent, int ID_, int parentID_);
  ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:41:2: note:   candidate expects 4 arguments, 0 provided
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:39:7: note: rebuiltJoint::rebuiltJoint(const rebuiltJoint&)
 class rebuiltJoint{
       ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:39:7: note:   candidate expects 1 argument, 0 provided
make[2]: *** [CMakeFiles/mirror.dir/src/mirror.cpp.o] Error 1
make[1]: *** [CMakeFiles/mirror.dir/all] Error 2
make: *** [all] Error 2
